feat: add Moltbook theme as default
- Add 'moltbook' theme with lobster-red primary color (#e74c3c)
- Dark mode with coral accents
- Set moltbook as default theme for new users
- Update splash/adaptive icon backgrounds to match
- Update notification accent color
- Fix isDark check to include moltbook theme

--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#1a1a2e"
+      "backgroundColor": "#0d0d0d"
     },
     "ios": {
       "supportsTablet": false,
@@ -27,7 +27,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#1a1a2e"
+        "backgroundColor": "#0d0d0d"
       },
       "package": "com.moltygram.app",
       "edgeToEdgeEnabled": true
@@ -58,7 +58,7 @@
         "expo-notifications",
         {
           "icon": "./assets/icon.png",
-          "color": "#ff6b6b"
+          "color": "#e74c3c"
         }
       ]
     ],
