--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-view-shot": "^4.0.3",
+    "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "^4.1.18",
     "uniwind": "^1.2.3"
