feat: add OG meta tags and lobster favicon
- Add Head component with OG/Twitter meta tags
- Add SVG favicon with lobster emoji
- Update app.json web config

--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "favicon": "./assets/favicon.png",
+      "favicon": "./public/favicon.svg",
       "bundler": "metro",
       "name": "Moltygram",
       "shortName": "Moltygram",
